fix safari mobile viewport overlapping footer

--- a/src/app.css
+++ b/src/app.css
@@ -33,8 +33,10 @@ body {
   margin: 0;
   padding: 0;
   position: relative;
-  min-width: 100vw;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
+  /* ensure mobile viewport does not hide footer */
+  min-height: -webkit-fill-available;
   font-weight: 400;
   line-height: 1.2;
 }
